# pdf-craft

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README_zh-CN.md  auto_fix_garbled.py  pdf2epub_paddle.py  pdf2epub_paddle_original.py  pyproject.toml
.github/: copilot-instructions.md
.trae/documents/: vertical-traditional-ocr-plan.md
contrib/: paddleocr_to_epub.py
docs/: INSTALLATION.md
docs/plans/: 2026-02-05-bird-ocr-epub-design.md
paddle_pipeline/: __init__.py  book_repairs.py  config.py  epub_builder.py  epub_href.py  epub_validate.py  footnotes.py  heading_cleanup.py  main.py  metadata.py  mineru_api.py  mineru_rerun.py  ocr_noise.py  ocr_review.py  paddle_api.py  page_boundary_review.py  page_image_fallback.py  page_order_repair.py  rebuild_from_checkpoint.py  semantic_ocr_review.py  toc_retarget.py  weread_chapterize.py
pdf_craft/: __init__.py  error.py  functions.py  transform.py
pdf_craft/pdf/: __init__.py  ocr.py  page_extractor.py  types.py
scripts/: gen_epub.py
tests/: test_auto_fix_garbled.py  test_gen_epub_script.py  test_glm_ocr_prompt.py  test_main_retry_boundaries.py  test_mineru_api_retries.py  test_mineru_cleaning.py  test_mineru_rerun.py  test_ocr_review.py  test_ocr_tuning_config.py  test_paddle_api_retries.py  test_paddleocr_to_epub_optimize.py  test_page_boundary_review.py  test_page_headers.py  test_pdf2epub_paddle_dependency_check.py  test_pdf2epub_paddle_ocr_cleanup.py  test_rebuild_from_checkpoint.py  test_semantic_ocr_review.py  test_vertical_ocr_tuning.py  test_weread_chapterize.py
(+9 files in other folders)
