[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pdf-craft"
version = "1.0.8"
description = "PaddleOCR-based PDF to EPUB converter for scanned books."
license = "MIT"
readme = "README.md"
keywords = ["pdf", "epub", "paddleocr"]
packages = [
    {include = "paddle_pipeline"}
]

[project.scripts]
pdf2epub-paddle = "paddle_pipeline.main:main"
pdf2epub-ocr-review = "paddle_pipeline.ocr_review:main"
pdf2epub-mineru-rerun = "paddle_pipeline.mineru_rerun:main"
pdf2epub-weread-chapterize = "paddle_pipeline.weread_chapterize:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
requests = "^2.31.0"
pymupdf = "^1.25.0"
ebooklib = "^0.18.0"
python-dotenv = "^1.0.0"
markdown = "^3.7.0"
numpy = ">=2.0.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
pyright = "^1.1.407"
ruff = "^0.14.11"

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = "none"
